This commit will fix the spacing of the dashboard section

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,8 @@ nav {
     .main-dashboard {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        text-align: left;
     }
     
     .alert-banner {
